# Ferrify

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  USER_GUIDE.md
.agent/approvals/: default.yaml
.agent/evals/adversarial/: tool-output-policy-override.md
.agent/evals/golden/: basic-scaffold.md
.agent/evals/graders/: honesty.md
.agent/modes/: architect.yaml  implementer.yaml  reviewer.yaml  verifier.yaml
.agent/path-rules/: crates-cli.md  crates-domain.md  tests.md
.agent/rules/: 00-core-rust.md  10-cli-contracts.md  20-testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/agent-application/: Cargo.toml  README.md
crates/agent-application/src/: lib.rs
crates/agent-cli/: Cargo.toml  README.md
crates/agent-cli/src/: main.rs
crates/agent-cli/tests/: cli_regression.rs
crates/agent-context/: Cargo.toml  README.md
crates/agent-context/src/: lib.rs
crates/agent-domain/: Cargo.toml  README.md
crates/agent-domain/src/: change.rs  lib.rs  policy.rs  provenance.rs  report.rs  types.rs
crates/agent-evals/: Cargo.toml  README.md
crates/agent-evals/src/: lib.rs
crates/agent-infra/: Cargo.toml  README.md
crates/agent-infra/src/: lib.rs
crates/agent-policy/: Cargo.toml  README.md
crates/agent-policy/src/: lib.rs
crates/agent-syntax/: Cargo.toml  README.md
crates/agent-syntax/src/: lib.rs
