[package]
name = "ferrify"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["rust", "agent", "cli", "governance", "verification"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-application = { path = "../agent-application" }
agent-domain = { path = "../agent-domain" }
agent-infra = { path = "../agent-infra" }
agent-policy = { path = "../agent-policy" }
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
