[package]
name = "agent-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferrify repository modeling and working-context selection."
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
agent-domain = { path = "../agent-domain" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
