[package]
name = "ferrify-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferrify repository modeling and working-context selection."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ferrify-context"
rust-version.workspace = true
readme = "README.md"
keywords = ["rust", "agent", "context", "repository", "governance"]
categories = ["development-tools"]

[dependencies]
agent-domain = { package = "ferrify-domain", version = "0.1.1", path = "../agent-domain" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
