[package]
name = "agent-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferrify trace grading and evaluation utilities."
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
agent-domain = { path = "../agent-domain" }
serde.workspace = true
