[package]
name = "ferrify-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferrify trace grading and evaluation utilities."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ferrify-evals"
rust-version.workspace = true
readme = "README.md"
keywords = ["rust", "agent", "evaluation", "trace", "governance"]
categories = ["development-tools"]

[dependencies]
agent-domain = { package = "ferrify-domain", version = "0.1.1", path = "../agent-domain" }
serde.workspace = true
