[package]
name = "agent-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ferrify patch planning and edit-budget enforcement."
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
agent-domain = { path = "../agent-domain" }
